--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-body 
-{
-    color: red;
+body {
+    background: url('img/Background.gif') no-repeat center center fixed;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
