--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('img/Background.gif') no-repeat center center fixed;
+    background: url('./img/Background.gif') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
