--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'BlankRiver';
-    src: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/font/Blank%20River.ttf') format('truetype');
+    src: url('font/Blank River.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,20 +39,16 @@
 .pp {
     width: 120px;
     height: 120px;
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/pp.jpg');
+    background: url('img/pp.jpg');
     background-size: cover;
     background-position: center;
-
     position: absolute;
     top: 220px;
     left: 50%;
     transform: translateX(-50%);
-
     z-index: 20;
-
     border-radius: 50%; 
-    border: 3px solid #ff99cc; 
-    
+    border: 3px solid #ff99cc;    
     box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.7);
 }
 
@@ -63,13 +59,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); 
-
     width: 700px; 
     height: 400px;
     background: rgba(0, 0, 0, 0.3); 
     backdrop-filter: blur(10px); 
     border-radius: 20px; 
-
     border: 3px solid #ff99cc; 
     box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(114, 204, 253, 0.7); 
 }
@@ -80,14 +74,280 @@
     letter-spacing: .05em;
     font-size: 28px;
     font-weight: bold;
-    text-align: center;
-   
+    text-align: center;  
     color: #ffffff; 
     filter: drop-shadow(#ffffff 0px 0px 0.5rem);
     position: absolute;
     top: 15%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    
+    transform: translate(-50%, -50%);  
     animation: flicker 1.5s infinite alternate;
+}
+
+.Titre {
+    font-family: 'BlankRiver', sans-serif;
+    letter-spacing: .05em;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: #ffffff;
+    filter: drop-shadow(#ffffff 0px 0px 0.5rem);
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: flicker 1.5s infinite alternate;
+}
+
+/* ========================= */
+/*      Boutons Sites        */
+/* ========================= */
+
+.Projet1 {
+    display: inline-block; 
+    width: 315px;
+    height: 65px; 
+    line-height: 65px; 
+    text-align: center;
+    text-decoration: none; 
+    color: #ff99cc; 
+    font-weight: bold;
+    font-size: 18px;
+    position: absolute;
+    top: 35%; 
+    left: 25%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 15px; 
+    background: transparent; 
+    border: 2px solid #ff99cc; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    transition: 0.3s ease-in-out;
+}
+
+.Projet1:hover {
+    transform: translateX(-50%) scale(1.1);
+    box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.9);
+}
+
+
+.Projet2 {
+    display: inline-block; 
+    width: 315px; 
+    height: 65px; 
+    line-height: 65px; 
+    text-align: center;
+    text-decoration: none; 
+    color: #ff99cc; 
+    font-weight: bold;
+    font-size: 18px;
+    position: absolute;
+    top: 35%; 
+    left: 75%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 15px; 
+    background: transparent; 
+    border: 2px solid #ff99cc; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    transition: 0.3s ease-in-out;
+}
+
+.Projet2:hover {
+    transform: translateX(-50%) scale(1.1);
+    box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.9);
+}
+
+/* ========================= */
+/*      Boutons Logiciels    */
+/* ========================= */
+
+.CE {
+    display: inline-block; 
+    width: 195px; 
+    height: 65px;
+    line-height: 65px; 
+    text-align: center;
+    text-decoration: none; 
+    color: #ff99cc; 
+    font-weight: bold;
+    font-size: 18px;
+    position: absolute;
+    top: 55%;
+    left: 20%;
+    transform: translateX(-50%);
+    z-index: 20;
+    border-radius: 15px;
+    border: 2px solid #ff99cc;
+    background: transparent; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    transition: 0.3s ease-in-out;
+}
+
+    .CE:hover {
+        transform: translateX(-50%) scale(1.1);
+        box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.9);
+    }
+
+.DLL {
+    display: inline-block; 
+    width: 195px; 
+    height: 65px; 
+    line-height: 65px; 
+    text-align: center;
+    text-decoration: none; 
+    color: #ff99cc; 
+    font-weight: bold;
+    font-size: 18px;
+    position: absolute;
+    top: 55%; 
+    left: 50%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 15px; 
+    background: transparent; 
+    border: 2px solid #ff99cc; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    transition: 0.3s ease-in-out;
+}
+
+.DLL:hover {
+    transform: translateX(-50%) scale(1.1);
+    box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.9);
+}
+
+.Aim {
+    display: inline-block; 
+    width: 195px; 
+    height: 65px; 
+    line-height: 65px; 
+    text-align: center;
+    text-decoration: none; 
+    color: #ff99cc; 
+    font-weight: bold;
+    font-size: 18px;
+    position: absolute;
+    top: 55%; 
+    left: 80%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 15px; 
+    background: transparent; 
+    border: 2px solid #ff99cc; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    transition: 0.3s ease-in-out;
+}
+
+.Aim:hover {
+    transform: translateX(-50%) scale(1.1);
+    box-shadow: 0 0 15px #ff99cc, 0 0 30px rgba(255, 153, 204, 0.9);
+}
+
+/* ========================= */
+/*      Boutons réseaux      */
+/* ========================= */
+
+.Discord {
+    display: inline-block; 
+    width: 75px; 
+    height: 75px; 
+
+    position: absolute;
+    top: 75%; 
+    left: 26%;
+    transform: translateX(-50%); 
+
+    z-index: 20; 
+
+    border-radius: 20px;
+    border: 2px solid #ff99cc; 
+
+    background: url('img/discord.png'); 
+    background-size: 70%; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    filter: drop-shadow(0 0 5px #ff99cc);
+    transition: 0.3s ease-in-out;
+}
+
+    .Discord:hover {
+        transform: translateX(-50%) scale(1.1); 
+        box-shadow: 0 0 10px #ff99cc, 0 0 20px rgba(255, 153, 204, 0.8);
+    }
+
+
+.YT {
+    display: inline-block; 
+    width: 75px; 
+    height: 75px; 
+    position: absolute;
+    top: 75%; 
+    left: 42%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 20px; 
+    border: 2px solid #ff99cc; 
+    background: url('img/YT.png'); 
+    background-size: 70%; 
+    background-repeat: no-repeat; 
+    background-position: center; 
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    filter: drop-shadow(0 0 5px #ff99cc);
+    transition: 0.3s ease-in-out;
+}
+
+.YT:hover {
+    transform: translateX(-50%) scale(1.1); 
+    box-shadow: 0 0 10px #ff99cc, 0 0 20px rgba(255, 153, 204, 0.8);
+}
+
+.X {
+    display: inline-block; 
+    width: 75px; 
+    height: 75px; 
+    position: absolute;
+    top: 75%; 
+    left: 58%;
+    transform: translateX(-50%); 
+    z-index: 20; 
+    border-radius: 20px; 
+    border: 2px solid #ff99cc; 
+    background: url('img/X.png'); 
+    background-size: 70%; 
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    filter: drop-shadow(0 0 5px #ff99cc);
+    transition: 0.3s ease-in-out; 
+}
+
+.X:hover {
+    transform: translateX(-50%) scale(1.1); 
+    box-shadow: 0 0 10px #ff99cc, 0 0 20px rgba(255, 153, 204, 0.8);
+}
+
+.GH {
+    display: inline-block; 
+    width: 75px; 
+    height: 75px; 
+    position: absolute;
+    top: 75%; 
+    left: 74%;
+    transform: translateX(-50%);
+    z-index: 20; 
+    border-radius: 20px; 
+    border: 2px solid #ff99cc; 
+    background: url('img/GH.png'); 
+    background-size: 70%; 
+    background-repeat: no-repeat; 
+    background-position: center;
+    box-shadow: 0 0 5px #ff99cc, 0 0 10px rgba(255, 153, 204, 0.5);
+    filter: drop-shadow(0 0 5px #ff99cc);
+    transition: 0.3s ease-in-out;
+}
+
+.GH:hover {
+    transform: translateX(-50%) scale(1.1); 
+    box-shadow: 0 0 10px #ff99cc, 0 0 20px rgba(255, 153, 204, 0.8);
 }
