--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'BlankRiver';
+    src: url('font/Blank River.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 #bg-video 
 {
     position: fixed;
@@ -112,10 +119,12 @@
         visibility: hidden;
     }
 
+
+
 .pp {
     width: 120px;
     height: 120px;
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/pp.jpg');
+    background: url('img/pp.jpg');
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -338,7 +347,7 @@
     border-radius: 20px;
     border: 2px solid #ff99cc; 
 
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Discord.png'); 
+    background: url('img/discord.png'); 
     background-size: 70%; 
     background-repeat: no-repeat; 
     background-position: center; 
@@ -364,7 +373,7 @@
     z-index: 20; 
     border-radius: 20px; 
     border: 2px solid #ff99cc; 
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/YT.png'); 
+    background: url('img/YT.png'); 
     background-size: 70%; 
     background-repeat: no-repeat; 
     background-position: center; 
@@ -389,7 +398,7 @@
     z-index: 20; 
     border-radius: 20px; 
     border: 2px solid #ff99cc; 
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/X.png'); 
+    background: url('img/X.png'); 
     background-size: 70%; 
     background-repeat: no-repeat;
     background-position: center;
@@ -414,7 +423,7 @@
     z-index: 20; 
     border-radius: 20px; 
     border: 2px solid #ff99cc; 
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/GH.png'); 
+    background: url('img/GH.png'); 
     background-size: 70%; 
     background-repeat: no-repeat; 
     background-position: center;
