--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@
     border-radius: 20px;
     border: 2px solid #ff99cc; 
 
-    background: url('https://raw.githubusercontent.com/LapPl4ND/LapPl4ND.github.io/main/img/Discord.png');
+    background: url('img/Discord.png');
     background-size: 70%; 
     background-repeat: no-repeat; 
     background-position: center; 
